# Skity

./: CMakeLists.txt
cmake/: Shader.cmake  ThirdPartyDep.cmake
example/: CMakeLists.txt
example/vk/: vk_app.cc
shaders/: vk_common.vert.spv  vk_gs_common.vert.spv
shaders/vk/: vk_common.vert  vk_gs_common.vert
src/effect/: discrete_path_effect.cc
src/geometry/: conic.cc  contour_measure.cc  geometry.hpp  math.hpp  point_priv.hpp  rect.cc
src/graphic/: path.cc
src/render/hw/: hw_canvas_state.cc  hw_draw.cc  hw_draw.hpp  hw_geometry_raster.cc  hw_mesh.cc  hw_mesh.hpp  hw_path_raster.cc  hw_render_target.hpp
src/render/hw/vk/: vk_pipeline_wrapper.cc  vk_pipeline_wrapper.hpp
src/render/text/: font_texture.hpp
src/text/: ft_library_wrap.cc
src/utils/: lazy.hpp
test/: CMakeLists.txt
